// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AboutModalBox Test 1`] = `
<div
  aria-describedby="id2"
  aria-labelledby="id"
  aria-modal="true"
  className="pf-c-about-modal-box"
  role="dialog"
>
  This is a AboutModalBox
</div>
`;

exports[`AboutModalBox should match snapshot (auto-generated) 1`] = `
<div
  aria-modal="true"
  className="pf-c-about-modal-box ''"
  role="dialog"
>
  <div>
    ReactNode
  </div>
</div>
`;
